feature(post): add a comment Create a controller of adding comment Create a router of adding comment Create a validation for adding a comment Put adding comment into swagger
