# server/controllers/posts.js
@@ -1,4 +1,5 @@
 import Post from "../models/posts";
+import commentSchema from "../validation/comment";
 import postSchema from "../validation/posts";
 
 class Posts {
@@ -27,6 +28,30 @@ class Posts {
         });
     }
 
+    async insertComment(req, res) {
+
+        const { error } = commentSchema.validate(req.body);
+        if (error) {
+          return res.status(400).json({
+            status: 400,
+            message: error.details[0].message.replace(/"/g, ''),
+          });
+        }
+
+        const { name, comment } = req.body;
+        const post = await Post.findOne({ _id: req.params.id });
+        if (!post){ 
+            return res.status(404).json({ 
+                status: 404, error: "The post is not found" 
+            })};
+        await Post.updateOne({ _id: req.params.id }, { $push: { comments: { name: name, comment: comment } } });
+        return res.status(200).json({ 
+            status: 200, 
+            message: "comment posted Successfully" 
+        });
+    }
+
+
     async getPosts(_req, res) {
         const posts = await Post.find()
         res.status(200).json({ 
@@ -39,7 +64,7 @@ class Posts {
         const post = await Post.findOne({ _id: req.params.id });
         if (!post) return res.status(404).json({ 
             status: 404, 
-            message: "Post not found!" 
+            message: "The post is not found" 
         });
        return res.status(200).json({ 
             status: 200, 
@@ -52,7 +77,7 @@ class Posts {
         const post = await Post.findOne({ _id: req.params.id });
         if (!post) return res.status(404).json({ 
             status: 404, 
-            message: "Post not found!" 
+            message: "The post is not found" 
         });
 
         if (title) { post.title = title }
@@ -73,7 +98,7 @@ class Posts {
         const post = await Post.findOne({ _id: req.params.id });
         if (!post) return res.status(404).json({ 
             status: 404, 
-            message: "Post not found!" 
+            message: "The post is not found" 
         });
         await Post.deleteOne({ _id: req.params.id });
        return res.status(200).json({ 
@@ -85,3 +110,160 @@ class Posts {
 }
 
 export default new Posts();
+
+
+
+
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+// import Post from "../models/posts";
+
+// class Comments {
+//     async addComment(req, res) {
+//         const { name, comment } = req.body;
+//         const post = await Post.findOne({ _id: req.params.id });
+//         if (!post) return res.status(404).send({ status: 404, error: "Post not found!" });
+//         await Post.updateOne({ _id: req.params.id }, { $push: { comments: { name: name, comment: comment } } });
+//         return res.status(200).send({ status: 200, message: "comment posted Successfully" });
+//     }
+// }
+
+// export default new Comments();
+
+
+
+// min: 150,
+// required: true
+// },
+// imageLink: {
+// type: String,
+// required: true
+// },
+// comments: {
+// type: Array
+// },
+// likes: {
+// type: Number,
+// default: 0
+// }
+// });
+
+
+
+
+
+
+
+// import chai from "chai";
+// import chaiHttp from "chai-http";
+// import app from "../app";
+// import { data } from "./testData";
+// import { postId } from "./posts.test";
+
+// const { expect } = chai;
+// chai.use(chaiHttp);
+
+// describe('Comment on a blog Post', () => {
+//     it('should return 200 ok status code on successful comment post', (done) => {
+//         chai
+//             .request(app)
+//             .post(`/posts/comment/${postId}`)
+//             .send(data.validComment)
+//             .end((err, res) => {
+//                 expect(res).to.have.status(200);
+//                 done();
+//             })
+//     });
+
+//     it('should return 400 bad request status when passed an invalid comment', (done) => {
+//         chai
+//             .request(app)
+//             .post(`/posts/comment/${postId}`)
+//             .send(data.invalidComment)
+//             .end((err, res) => {
+//                 expect(res).to.have.status(400);
+//                 done();
+//             });
+//     });
+
+//     it('should return 404 not found status when passed an invalid post Id', (done) => {
+//         chai
+//             .request(app)
+//             .post(`/posts/comment/${data.invalidPostID}`)
+//             .send(data.validComment)
+//             .end((err, res) => {
+//                 expect(res).to.have.status(404);
+//                 expect(res.body).to.have.property("error");
+//                 done();
+//             });
+//     });
+// });
+
+
+
+
+// import chai from "chai";
+// import chaiHttp from "chai-http";
+// import app from "../app";
+// import { data } from "./testData";
+// import { postId } from "./posts.test";
+
+// const { expect } = chai;
+// chai.use(chaiHttp);
+
+// describe('Like a blog Post', () => {
+//     it('should return 200 ok status code on successful liked post', (done) => {
+//         chai
+//             .request(app)
+//             .post(`/posts/like/${postId}`)
+//             .end((err, res) => {
+//                 expect(res).to.have.status(200);
+//                 done();
+//             })
+//     });
+
+//     it('should return 404 not found status when passed an invalid post Id', (done) => {
+//         chai
+//             .request(app)
+//             .post(`/posts/like/${data.invalidPostID}`)
+//             .end((err, res) => {
+//                 expect(res).to.have.status(404);
+//                 expect(res.body).to.have.property("error");
+//                 done();
+//             });
+//     });
+// });
+
+
+
+// import Post from "../models/posts";
+
+// class Like {
+//     async likePost(req, res) {
+//         const post = await Post.findOne({ _id: req.params.id });
+//         if (!post) return res.status(404).send({ status: 404, error: "Post not found!" });
+//         await Post.updateOne({ _id: req.params.id }, { $inc: { likes: 1 } });
+//         return res.status(200).send({ status: 200, message: "Liked!!!" });
+//     }
+// }
+
+
+// export default new Like();
